Fix wrong color of close button on mobile menu.

--- a/laravel/public/styl/eca.styl
+++ b/laravel/public/styl/eca.styl
@@ -58,7 +58,7 @@ section.ui.content
 				margin: 0
 		.toggle.item
 			&.open
-				background-color: #4CAF50;
+				background-color: #51bcea;
 				.icon
 					color: white !important
 			.icon
